[tool.poetry]
name = "es-job-interface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytz = "^2024.1"
httpx = "^0.27.0"
elasticsearch = "7.10"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
jpype1 = "^1.5.0"
psycopg2-binary = "^2.9.9"
jaydebeapi = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
